# My-Portfolio

./: README.md
Aircraft_Performance/: README.md
Aircraft_Performance/artifical_img/: CNN Tensorflow.py  CNN_Image_builder.py
Aircraft_Performance/dual_cnn/: MLP NN Tensorflow.py
Aircraft_Performance/rosenbrock_code/: rose_grad_explicit_enhanced_nn.py  rose_grad_explicit_nn.py  (+1 more)
Automatic_Differentiation/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
Automatic_Differentiation/demo/: NN.ipynb
Automatic_Differentiation/docs/: README.md  documentation.md  milestone1.md  milestone2.md  milestone2_progress.md
Automatic_Differentiation/src/autodiff/backward/: __init__.py  function.py  sym.py
Automatic_Differentiation/src/autodiff/forward/: __init__.py  function.py  sym.py
Automatic_Differentiation/src/autodiff/vector/: __init__.py  function.py  sym.py
Automatic_Differentiation/tests/NN_test/: nn.py
Automatic_Differentiation/tests/backward/: test_function_bw.py  test_symbol_bw.py
Automatic_Differentiation/tests/forward/: test_function_fw.py  test_newton_fw.py  test_symbol_fw.py
Automatic_Differentiation/tests/vector/: test_function_vc.py  test_sym_vc.py
Bar_Code/: README.md  detect.py
Due_Diligence/: README.md  Summary_and_Takeaways.docx  output.xlsx
Image_Colorization/: README.md  code.ipynb
Medical_Imaging_Diagnosis/: CNN-Part 1-1.ipynb  README.md  VIT-Part 2-1.ipynb
NLP_TimeSeries/: README.md  model.ipynb
Passenger_Satisfaction/: Code.ipynb  README.md
Spotify_Playlist/: README.md  code.ipynb  preprocessing.ipynb
(+6 files in other folders)
