[metadata]
name = AutoDiff_jnrw
version = 0.0.2
author = cs107-jnrw
author_email = ruicheng@fas.harvard.edu
description = Package for auto-differentiation, for more details, please refer to docs folder.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-jnrw/cs107-FinalProject
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.5
install_requires = 
	numpy

[options.packages.find]
where=src